compiler/e2e/test/snapshot/bootstrap/redifinition/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: assert_string
---
stderr:
error: symbol `First` is already defined in the scope `main`
  ╭─ bootstrap/redifinition/main.pnx:5:14
  │
1 │ public trait First:
  │              ----- symbol `First` is already defined here
  ·
5 │ public trait First:
  │              ^^^^^ redefinition here

error: symbol `Second` is already defined in the scope `main`
   ╭─ bootstrap/redifinition/main.pnx:13:17
   │
 9 │ public trait Second:
   │              ------ symbol `Second` is already defined here
   ·
13 │ public function Second():
   │                 ^^^^^^ redefinition here



stdout:
